--- a/flappy.html
+++ b/flappy.html
@@ -14,6 +14,8 @@
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+<link rel="manifest" href="manifest.json">
+
 
 /* ================================
    🔧 SETTINGS (EDIT ONLY HERE)
@@ -309,3 +311,4 @@ loop();
 </script>
 </body>
 </html>
+
