--- a/flappy.html
+++ b/flappy.html
@@ -15,6 +15,11 @@
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 <link rel="manifest" href="manifest.json">
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('service-worker.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.log('Service Worker failed:', err));
+}
 
 
 /* ================================
@@ -311,4 +316,5 @@ loop();
 </script>
 </body>
 </html>
+
 
