--- a/flappy.html
+++ b/flappy.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Flappy</title>
-<style>
-  body { margin:0; overflow:hidden; background:#70c5ce; }
-  canvas { display:block; margin:auto; background:#70c5ce; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dhandli Flappy</title>
+
+  <!-- ===============================
+       🔧 PWA MANIFEST
+       This must be in <head> for PWABuilder to detect your app
+  =============================== -->
+  <link rel="manifest" href="manifest.json">
+
+  <style>
+    body { margin:0; overflow:hidden; background:#70c5ce; }
+    canvas { display:block; margin:auto; background:#70c5ce; }
+  </style>
 </head>
 <body>
+
 <canvas id="game" width="400" height="600"></canvas>
 
 <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-<link rel="manifest" href="manifest.json">
+/* ================================
+   🔧 SERVICE WORKER REGISTRATION
+   Ensures offline caching works
+================================ */
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.log('Service Worker failed:', err));
 }
 
-
 /* ================================
-   🔧 SETTINGS (EDIT ONLY HERE)
+   🔧 SETTINGS (EDIT HERE)
 ================================ */
 
-// Bird
-const BIRD_WIDTH = 60;
-const BIRD_HEIGHT = 40;
-const BIRD_GRAVITY = 0.6;
-const BIRD_LIFT = -10;
+// Bird settings
+const BIRD_WIDTH = 60;     // Bird width in px
+const BIRD_HEIGHT = 40;    // Bird height in px
+const BIRD_GRAVITY = 0.6;  // Gravity applied to bird
+const BIRD_LIFT = -10;     // Upward velocity when flap
 
-// Pipes
+// Pipe settings
 const PIPE_WIDTH = 60;
 const PIPE_GAP = 170;
 const PIPE_SPEED = 2;
 
-// Hitbox
-const HITBOX_PADDING = 6; // bigger = easier
+// Hitbox padding
+const HITBOX_PADDING = 6; // bigger = easier collision
 
 // Score text
-const SCORE_FONT_SIZE = 28;
+const SCORE_FONT_SIZE = 28; // font size in px
 
 // Start button
 const START_BTN_WIDTH = 220;
@@ -54,23 +63,26 @@ const RESTART_BTN_HEIGHT = 60;
 const RESTART_BTN_FONT = 22;
 
 // Death animation
-const DEATH_MAX_SCALE = 5;
-const DEATH_GROW_SPEED = 0.08;
-const DEATH_SHAKE_AMOUNT = 8;
-const DEATH_SHAKE_SPEED = 0.4;
-const DEATH_TEXT_SCALE = 0.15;
-const DEATH_TEXT_OFFSET = 40;
+const DEATH_MAX_SCALE = 5;       // how big bird grows
+const DEATH_GROW_SPEED = 0.08;   // speed of growth
+const DEATH_SHAKE_AMOUNT = 8;    // shake amount
+const DEATH_SHAKE_SPEED = 0.4;   // shake speed
+const DEATH_TEXT_SCALE = 0.15;   // relative to bird size
+const DEATH_TEXT_OFFSET = 40;    // distance below bird for text
 
 /* ================================ */
 
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+
 let bird = {
-  x:80,
-  y:250,
-  width:BIRD_WIDTH,
-  height:BIRD_HEIGHT,
-  gravity:BIRD_GRAVITY,
-  lift:BIRD_LIFT,
-  velocity:0
+  x: 80,
+  y: 250,
+  width: BIRD_WIDTH,
+  height: BIRD_HEIGHT,
+  gravity: BIRD_GRAVITY,
+  lift: BIRD_LIFT,
+  velocity: 0
 };
 
 let pipes = [];
@@ -80,27 +92,37 @@ let gameOver = false;
 let gameStarted = false;
 let deathFrame = 0;
 
+/* ================================
+   🔧 IMAGES
+================================ */
 const birdImg = new Image();
-birdImg.src = "bird.png";
+birdImg.src = "bird.png"; // Make sure exact filename
 
 const pipeImg = new Image();
-pipeImg.src = "pipe.png";
+pipeImg.src = "pipe.png"; // Make sure exact filename
 
+/* ================================
+   🔧 BUTTONS
+================================ */
 const startButton = {
-  x:canvas.width/2 - START_BTN_WIDTH/2,
-  y:260,
-  width:START_BTN_WIDTH,
-  height:START_BTN_HEIGHT
+  x: canvas.width/2 - START_BTN_WIDTH/2,
+  y: 260,
+  width: START_BTN_WIDTH,
+  height: START_BTN_HEIGHT
 };
 
 const restartButton = {
-  x:canvas.width/2 - RESTART_BTN_WIDTH/2,
-  y:500,
-  width:RESTART_BTN_WIDTH,
-  height:RESTART_BTN_HEIGHT
+  x: canvas.width/2 - RESTART_BTN_WIDTH/2,
+  y: 500,
+  width: RESTART_BTN_WIDTH,
+  height: RESTART_BTN_HEIGHT
 };
 
-function restart(){
+/* ================================
+   🔧 FUNCTIONS
+================================ */
+
+function restart() {
   bird.y = 250;
   bird.velocity = 0;
   pipes = [];
@@ -110,7 +132,7 @@ function restart(){
   gameOver = false;
 }
 
-function drawScore(){
+function drawScore() {
   ctx.fillStyle = "black";
   ctx.font = SCORE_FONT_SIZE + "px Arial";
   ctx.textAlign = "center";
@@ -118,88 +140,85 @@ function drawScore(){
   ctx.fillText("Score: " + score, canvas.width/2, 20);
 }
 
-function drawStartButton(){
-  if(!gameStarted){
+function drawStartButton() {
+  if (!gameStarted) {
     ctx.fillStyle = "blue";
-    ctx.fillRect(startButton.x,startButton.y,startButton.width,startButton.height);
-
+    ctx.fillRect(startButton.x, startButton.y, startButton.width, startButton.height);
     ctx.fillStyle = "white";
     ctx.font = START_BTN_FONT + "px Arial";
     ctx.textAlign = "center";
     ctx.textBaseline = "middle";
     ctx.fillText("TABDEELI TIME",
       startButton.x + startButton.width/2,
-      startButton.y + startButton.height/2);
+      startButton.y + startButton.height/2
+    );
   }
 }
 
-function drawRestartButton(){
-  if(gameOver){
+function drawRestartButton() {
+  if (gameOver) {
     ctx.fillStyle = "red";
-    ctx.fillRect(restartButton.x,restartButton.y,restartButton.width,restartButton.height);
-
+    ctx.fillRect(restartButton.x, restartButton.y, restartButton.width, restartButton.height);
     ctx.fillStyle = "white";
     ctx.font = RESTART_BTN_FONT + "px Arial";
     ctx.textAlign = "center";
     ctx.textBaseline = "middle";
     ctx.fillText("DHANDLI TIME",
       restartButton.x + restartButton.width/2,
-      restartButton.y + restartButton.height/2);
+      restartButton.y + restartButton.height/2
+    );
   }
 }
 
-function updatePipes(){
-  if(frame % 100 === 0){
-    let top = Math.random()*250 + 50;
-    pipes.push({
-      x:canvas.width,
-      top:top,
-      bottom:top + PIPE_GAP
-    });
+function updatePipes() {
+  if (frame % 100 === 0) {
+    let top = Math.random() * 250 + 50;
+    pipes.push({ x: canvas.width, top: top, bottom: top + PIPE_GAP });
   }
 
-  pipes.forEach(pipe=>{
+  pipes.forEach(pipe => {
     pipe.x -= PIPE_SPEED;
 
-    if(
+    if (
       bird.x + HITBOX_PADDING < pipe.x + PIPE_WIDTH &&
       bird.x + bird.width - HITBOX_PADDING > pipe.x &&
-      (bird.y + HITBOX_PADDING < pipe.top ||
-       bird.y + bird.height - HITBOX_PADDING > pipe.bottom)
-    ){
+      (bird.y + HITBOX_PADDING < pipe.top || bird.y + bird.height - HITBOX_PADDING > pipe.bottom)
+    ) {
       gameOver = true;
     }
 
-    if(pipe.x + PIPE_SPEED === bird.x) score++;
+    if (pipe.x + PIPE_SPEED === bird.x) score++;
   });
 
-  pipes = pipes.filter(p=>p.x > -PIPE_WIDTH);
+  pipes = pipes.filter(p => p.x > -PIPE_WIDTH);
 }
 
-function drawPipes(){
-  pipes.forEach(pipe=>{
-    ctx.drawImage(pipeImg, pipe.x,0,PIPE_WIDTH,pipe.top);
-    ctx.drawImage(pipeImg, pipe.x,pipe.bottom,PIPE_WIDTH,canvas.height-pipe.bottom);
+function drawPipes() {
+  pipes.forEach(pipe => {
+    ctx.drawImage(pipeImg, pipe.x, 0, PIPE_WIDTH, pipe.top);
+    ctx.drawImage(pipeImg, pipe.x, pipe.bottom, PIPE_WIDTH, canvas.height - pipe.bottom);
   });
 }
 
-function drawBird(){
-  if(!gameOver){
-    ctx.drawImage(birdImg,bird.x,bird.y,bird.width,bird.height);
+function drawBird() {
+  if (!gameOver) {
+    ctx.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
   }
 }
 
-function drawDeathEffect(){
-  if(!gameOver){
+function drawDeathEffect() {
+  if (!gameOver) {
     deathFrame = 0;
     return;
   }
 
   deathFrame++;
 
+  // Red overlay
   ctx.fillStyle = "rgba(255,0,0,0.25)";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+  // Grow + shake bird
   let scale = Math.min(1 + deathFrame * DEATH_GROW_SPEED, DEATH_MAX_SCALE);
   let bw = bird.width * scale;
   let bh = bird.height * scale;
@@ -213,11 +232,13 @@ function drawDeathEffect(){
   ctx.save();
   ctx.drawImage(birdImg, bx, by, bw, bh);
 
+  // Red tint on bird
   ctx.fillStyle = "rgba(255,0,0,0.5)";
   ctx.globalCompositeOperation = "source-atop";
   ctx.fillRect(bx, by, bw, bh);
   ctx.restore();
 
+  // Death text below bird
   ctx.fillStyle = "black";
   ctx.textAlign = "center";
   ctx.textBaseline = "top";
@@ -230,14 +251,14 @@ function drawDeathEffect(){
   );
 }
 
+/* ================================
+   🔧 INPUT HANDLING
+================================ */
 canvas.addEventListener("pointerdown", handleInput);
-// Keyboard support (spacebar)
+
 document.addEventListener("keydown", function(e){
-
   if(e.code === "Space"){
-
-    // Prevent page scrolling
-    e.preventDefault();
+    e.preventDefault(); // prevent page scroll
 
     if(!gameStarted){
       gameStarted = true;
@@ -253,21 +274,18 @@ document.addEventListener("keydown", function(e){
 
     bird.velocity = bird.lift;
   }
-
 });
-
 
 function handleInput(e){
   const rect = canvas.getBoundingClientRect();
   const scaleX = canvas.width/rect.width;
   const scaleY = canvas.height/rect.height;
-
-  const x = (e.clientX-rect.left)*scaleX;
-  const y = (e.clientY-rect.top)*scaleY;
+  const x = (e.clientX - rect.left) * scaleX;
+  const y = (e.clientY - rect.top) * scaleY;
 
   if(!gameStarted){
-    if(x>=startButton.x && x<=startButton.x+startButton.width &&
-       y>=startButton.y && y<=startButton.y+startButton.height){
+    if(x >= startButton.x && x <= startButton.x + startButton.width &&
+       y >= startButton.y && y <= startButton.y + startButton.height){
       gameStarted = true;
       restart();
     }
@@ -275,8 +293,8 @@ function handleInput(e){
   }
 
   if(gameOver){
-    if(x>=restartButton.x && x<=restartButton.x+restartButton.width &&
-       y>=restartButton.y && y<=restartButton.y+restartButton.height){
+    if(x >= restartButton.x && x <= restartButton.x + restartButton.width &&
+       y >= restartButton.y && y <= restartButton.y + restartButton.height){
       restart();
       gameStarted = true;
     }
@@ -286,6 +304,9 @@ function handleInput(e){
   bird.velocity = bird.lift;
 }
 
+/* ================================
+   🔧 GAME UPDATE & LOOP
+================================ */
 function update(){
   if(!gameStarted || gameOver) return;
 
@@ -313,8 +334,7 @@ function loop(){
 }
 
 loop();
+
 </script>
 </body>
 </html>
-
-
