--- a/flappy.html
+++ b/flappy.html
@@ -26,7 +26,7 @@
    Ensures offline caching works
 ================================ */
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js')
+  navigator.serviceWorker.register('pwabuilder-sw.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.log('Service Worker failed:', err));
 }
@@ -338,3 +338,4 @@ loop();
 </script>
 </body>
 </html>
+
